--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,11 @@
     "description":"Pescatore Extension to check for Phishing websites.",
     "manifest_version":2,
     "author":"Sandeep Jacob",
-    "background":{
-        "scripts":["index.js"]
-    },
+    "action":{},
     "browser_action":{
         "default_popup":"index.html",
-        "default_title":"First",
-        "default_icon":"icon.png"
+        "default_title":"Pescatore",
+        "default_icon":"logo.png"
     },
     "permissions":["tabs"]
     
