--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name":"Pescatore",
     "version":"1.24.1",
-    "description":"Pescatore Extension to check for Phishing websites.",
+    "description":"Chromium Extension to check for Phishing websites from the URL.",
     "manifest_version":2,
     "author":"Sandeep Jacob",
     "action":{},
