--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,9 @@
 {
     "name":"Pescatore",
-    "version":"1.24.1",
-    "description":"Chromium Extension to check for Phishing websites from the URL.",
+    "version":"1.24.0",
+    "description":"Firefox Extension to check for Phishing websites from the URL.",
     "manifest_version":2,
-    "author":"Sandeep Jacob",
-    "action":{},
+    "author":"Sandeep Kurian Jacob",
     "browser_action":{
         "default_popup":"index.html",
         "default_title":"Pescatore",
