--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "axios": "^1.3.4",
     "require": "^2.4.20"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "web-ext": "^7.6.0"
+  }
 }
