--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,15 @@
     "description":"Firefox Extension to check for Phishing websites from the URL.",
     "manifest_version":2,
     "author":"Sandeep Kurian Jacob",
+    "icons": {
+    "16": "logo16.png",
+    "32": "logo32.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
+    },
     "browser_action":{
         "default_popup":"index.html",
-        "default_title":"Pescatore",
-        "default_icon":"logo.png"
+        "default_title":"Pescatore"
     },
     "permissions":["tabs"]
     
